5-22更新 部门管理

--- a/templates/base.html
+++ b/templates/base.html
@@ -277,7 +277,7 @@
 
                                 <!-- 二级菜单 -->
                                 <ul class="nav nav-sub dk" style="font-size: 12px;">
-                                    <li {% ifequal web_chose_left_2 'company' %}class="active"{% endifequal %}>
+                                    <li {% ifequal web_chose_left_2 'unit' %}class="active"{% endifequal %}>
                                         <a href="{% url 'platform_management:platform_company_list' %}">
                                             <span>内部平台</span>
                                         </a>
