--- a/templates/users/units/dept_list.html
+++ b/templates/users/units/dept_list.html
@@ -55,7 +55,6 @@
                                             <th class="text-center">ID</th>
                                             <th class="text-center">单位名称</th>
                                             <th class="text-center">部门名称</th>
-                                            <th class="text-center">部门地址</th>
                                             <th class="text-center">联系人</th>
                                             <th class="text-center">联系电话</th>
                                             <th class="text-center">状态</th>
@@ -71,15 +70,10 @@
                                                     style="vertical-align:middle;">{{ each_dept.id }}
                                                 </td>
                                                 <td class="text-center"
-                                                    style="vertical-align:middle;">{{ each_dept.company }}
+                                                    style="vertical-align:middle;">{{ each_dept.unit }}
                                                 </td>
                                                 <td class="text-center"
                                                     style="vertical-align:middle;">{{ each_dept.name }}
-                                                </td>
-
-                                                <td class="text-center"
-                                                    style="vertical-align:middle;">{% if each_dept.address %}{{ each_dept.address }}
-                                                    {% else %}-{% endif %}
                                                 </td>
                                                 <td class="text-center"
                                                     style="vertical-align:middle;">{% if each_dept.connect %}{{ each_dept.connect }}
@@ -213,16 +207,6 @@
                     <div class="form-group"
                          style="vertical-align: middle;line-height: 34px;padding-bottom: 30px;">
                         <div class="col-md-3">
-                            <span style="font-size: 12px;">部门地址:</span>
-                        </div>
-                        <div class="col-md-9" style="padding: 0;">
-                            <input type="text" class="form-control" placeholder='部门地址' name="address">
-                        </div>
-                    </div>
-
-                    <div class="form-group"
-                         style="vertical-align: middle;line-height: 34px;padding-bottom: 30px;">
-                        <div class="col-md-3">
                             <span style="font-size: 12px;">联系人：</span>
                         </div>
                         <div class="col-md-9" style="padding: 0;">
@@ -320,7 +304,7 @@
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
                                         <input type="text" class="form-control" placeholder="单位名称"
-                                               maxlength="20" name="unit_name" required="" value="{{ each_dept.company }}" readonly>
+                                               maxlength="20" name="unit_name" required="" value="{{ each_dept.unit_name }}" readonly>
                                     </div>
                                 </div>
 
@@ -330,17 +314,7 @@
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
                                         <input type="text" class="form-control" placeholder='部门名称'
-                                               maxlength="20" name="name" required="">
-                                    </div>
-                                </div>
-
-                                <div class="form-group"
-                                     style="vertical-align: middle;line-height: 34px;padding-bottom: 30px">
-                                    <div class="col-md-3">
-                                        <span style="font-size: 12px;">部门地址:</span>
-                                    </div>
-                                    <div class="col-md-9" style="padding: 0;">
-                                        <input type="text" class="form-control" placeholder='部门地址' name="address">
+                                               maxlength="20" name="name" required="" value="{{ each_dept.name }}">
                                     </div>
                                 </div>
 
@@ -351,7 +325,7 @@
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
                                         <input type="text" class="form-control" placeholder="联系人"
-                                                   maxlength="20" name="connect">
+                                                   maxlength="20" name="connect" value="{{ each_dept.connect }}">
                                     </div>
                                 </div>
 
@@ -361,7 +335,7 @@
                                         <span style="font-size: 12px;">联系电话：</span>
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
-                                        <input type="text" class="form-control" placeholder="联系电话" name="connect_phone">
+                                        <input type="text" class="form-control" placeholder="联系电话" name="connect_phone" value="{{ each_dept.connect_phone }}">
                                     </div>
                                 </div>
 
@@ -381,7 +355,7 @@
                                         <span style="font-size: 12px;">备注：</span>
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
-                                        <input type="text" class="form-control" placeholder="备注" name="comment">
+                                        <input type="text" class="form-control" placeholder="备注" name="comment" value="{{ each_dept.comment }}">
                                     </div>
                                 </div>
                             </div>
