--- a/templates/users/units/unit_list.html
+++ b/templates/users/units/unit_list.html
@@ -298,7 +298,7 @@
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
                                         <input type="text" class="form-control" placeholder='单位名称'
-                                               maxlength="20" name="name" required="">
+                                               maxlength="20" name="name" required="" value="{{ each_unit.name }}">
                                     </div>
                                 </div>
 
@@ -308,7 +308,7 @@
                                         <span style="font-size: 12px;">单位地址:</span>
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
-                                        <input type="text" class="form-control" placeholder='单位地址' name="address" required="">
+                                        <input type="text" class="form-control" placeholder='单位地址' name="address" required="" value="{{ each_unit.address }}">
                                     </div>
                                 </div>
 
@@ -319,7 +319,7 @@
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
                                         <input type="text" class="form-control" placeholder="联系人"
-                                                   maxlength="20" name="connect" required="">
+                                                   maxlength="20" name="connect" required="" value="{{ each_unit.connect }}">
                                     </div>
                                 </div>
 
@@ -329,7 +329,7 @@
                                         <span style="font-size: 12px;">联系电话：</span>
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
-                                        <input type="text" class="form-control" placeholder="联系电话" name="connect_phone" required="">
+                                        <input type="text" class="form-control" placeholder="联系电话" name="connect_phone" required="" value="{{ each_unit.connect_phone }}">
                                     </div>
                                 </div>
 
@@ -349,7 +349,7 @@
                                         <span style="font-size: 12px;">备注：</span>
                                     </div>
                                     <div class="col-md-9" style="padding: 0;">
-                                        <input type="text" class="form-control" placeholder="备注" name="comment" required="">
+                                        <input type="text" class="form-control" placeholder="备注" name="comment" required="" value="{{ each_unit.comment }}">
                                     </div>
                                 </div>
                             </div>
