--- a/templates/users/user/user_info_other.html
+++ b/templates/users/user/user_info_other.html
@@ -52,7 +52,7 @@
                                     </tr>
                                     <tr class="gradeX odd" role="row">
                                         <td class="text-right" style="width: 20%; font-weight: bolder;">公司</td>
-                                        <td style="width: 30%">{{ user_info.position.department.company.name }}</td>
+                                        <td style="width: 30%">{{ user_info.position.department.unit.name }}</td>
                                         <td class="text-right" style="width: 20%; font-weight: bolder;">地址</td>
                                         <td style="width: 30%">
                                             {% if user_info.address %}{{ user_info.address }}{% else %}
