--- a/templates/host_management/host/host_info.html
+++ b/templates/host_management/host/host_info.html
@@ -111,7 +111,7 @@
                                             <td class="font-bold text-center">添加日期</td>
                                             <td class="text-center">{{ records.add_time }}</td>
                                             <td class="font-bold text-center">更新人</td>
-                                            <td class="text-center">{{ records.update_user.chinese_name }}</td>
+                                            <td class="text-center">{{ records.update_user.user_name }}</td>
                                             <td class="font-bold text-center">更新日期</td>
                                             <td class="text-center">{{ records.update_time }}</td>
                                         </tr>
