--- a/templates/sys_inspect/inspect_dev_list.html
+++ b/templates/sys_inspect/inspect_dev_list.html
@@ -94,7 +94,7 @@
                                                 <td class="text-center"
                                                     style="vertical-align:middle;">
                                                     {% for each_user in users %}{% if each_user.id is each_device.create_user %}
-                                                        {{ each_user.chinese_name }}{% else %}暂无{% endif %}
+                                                        {{ each_user.user_name }}{% else %}暂无{% endif %}
                                                     {% endfor %}
                                                 </td>
                                                 <td class="text-center"
