--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -175,7 +175,7 @@
                                                         <td width="45%"
                                                             style="padding-left: 10px;"><a
                                                                 href="{% url 'users:other_user_info' each.op_user.id %}"
-                                                                style="color:#006699 ;">{{ each.op_user.chinese_name }}</a>&nbsp;&nbsp;&nbsp;&nbsp;{{ each.action }}
+                                                                style="color:#006699 ;">{{ each.op_user.user_name }}</a>&nbsp;&nbsp;&nbsp;&nbsp;{{ each.action }}
                                                         </td>
                                                     </tr>
                                                 {% endfor %}
