--- a/templates/users/user/user_login_record.html
+++ b/templates/users/user/user_login_record.html
@@ -100,7 +100,7 @@
                                                 </td>
                                                 <td class="text-center">{{ forloop.counter }}</td>
                                                 <td class="text-center">{{ each_record.user.username }}</td>
-                                                <td class="text-center">{{ each_record.user.chinese_name }}</td>
+                                                <td class="text-center">{{ each_record.user.user_name }}</td>
                                                 <td class="text-center">{{ each_record.get_action_display }}</td>
                                                 <td class="text-center">
                                                     <button style="color: #1c2b36; border: none; background:none; line-height: 15px;"
