--- a/templates/users/user/user_op_record.html
+++ b/templates/users/user/user_op_record.html
@@ -98,7 +98,7 @@
                                                 </td>
                                                 <td class="text-center">{{ forloop.counter }}</td>
                                                 <td class="text-center">{{ each_record.op_user.username }}</td>
-                                                <td class="text-center">{{ each_record.op_user.chinese_name }}</td>
+                                                <td class="text-center">{{ each_record.op_user.user_name }}</td>
                                                 <td class="text-center">{{ each_record.get_operation_display }}</td>
                                                 <td class="text-center">{{ each_record.action }}</td>
                                                 <td class="text-center">{{ each_record.add_time }}</td>
