--- a/templates/host_management/host/host_list.html
+++ b/templates/host_management/host/host_list.html
@@ -380,7 +380,7 @@
                                 <div class="col-md-9" style="padding: 0;">
                                     <select name="op_user" class="selectpicker form-control" style="display: none;">
                                         {% for each_user in users %}
-                                            <option value="{{ each_user.id }}">{{ each_user.chinese_name }}</option>
+                                            <option value="{{ each_user.id }}">{{ each_user.user_name }}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
@@ -564,7 +564,7 @@
                                             {% for each_user in users %}
                                                 <option value="{{ each_user.id }}"
                                                         {% ifequal each_host_record.op_user.id each_user.id %}
-                                                        selected {% endifequal %}>{{ each_user.chinese_name }}</option>
+                                                        selected {% endifequal %}>{{ each_user.user_name }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
