--- a/templates/users/user/user_info_other.html
+++ b/templates/users/user/user_info_other.html
@@ -24,7 +24,7 @@
 
                         <div style="text-align: center;padding-top: 30px;">
                             <p style="font-size: 20px;font-weight: bolder;color: #fff;">{{ user_info.position.department.name }}
-                                - {{ user_info.position.name }} - {{ user_info.chinese_name }}</p>
+                                - {{ user_info.position.name }} - {{ user_info.user_name }}</p>
                             <p style="font-size: 20px;font-weight: bolder;color: #fff;">JOIN DAYS
                                 - {{ user_info.get_join_days }}</p>
                         </div>
@@ -43,7 +43,7 @@
                                     <tr class="gradeX odd" role="row">
                                         <td class="text-right" style="width: 20%; font-weight: bolder;">姓名</td>
                                         <td style="width: 30%">
-                                            {{ user_info.chinese_name }}{% if user_info.english_name %} [
+                                            {{ user_info.user_name }}{% if user_info.english_name %} [
                                                 {{ user_infoenglish_name }} ] {% endif %}</td>
                                         <td class="text-right" style="width: 20%; font-weight: bolder;">用户名</td>
                                         <td style="width: 30%">{{ user_info.username }} <span
