--- a/templates/base.html
+++ b/templates/base.html
@@ -218,7 +218,7 @@
                                 </a>
                             </li>
 
-                            {% if request.user.role > 1 %}
+                            {% if request.user.role < 3 %}
                                 <!-- 区块链 -->
                                 <li {% ifequal web_chose_left_1 'vechain' %}class="active"{% endifequal %}>
                                     <a>
@@ -239,7 +239,7 @@
                                 </li>
                             {% endif %}
 
-                            {% if request.user.role > 1 %}
+                            {% if request.user.role < 3 %}
                                 <!-- 巡检监督 -->
                                 <li {% ifequal web_chose_left_1 'inspect' %}class="active"{% endifequal %}>
                                     <a>
@@ -291,7 +291,7 @@
                                 </ul>
                             </li>
 
-                            {% if request.user.role > 1 %}
+                            {% if request.user.role < 3 %}
                                     <li {% ifequal web_chose_left_1 'basic_setting' %}class="active"{% endifequal %}>
                                         <a>
                                             <i class="pull-right fa fa-angle-right"
@@ -380,7 +380,7 @@
                                 </ul>
                             </li>
 
-                            {% if request.user.role > 1 %}
+                            {% if request.user.role < 3 %}
                                 <!-- 主机管理 -->
                                 <li {% ifequal web_chose_left_1 'port_domain' %}class="active"{% endifequal %}>
                                     <a>
@@ -461,11 +461,11 @@
                                             <span>部门管理</span>
                                         </a>
                                     </li>
-                                    <li {% ifequal web_chose_left_2 'user_info' %}class="active"{% endifequal %}>
-                                        <a href="{% url 'users:user_info' %}">
-                                            <span>人员管理</span>
-                                        </a>
-                                    </li>
+{#                                    <li {% ifequal web_chose_left_2 'user_info' %}class="active"{% endifequal %}>#}
+{#                                        <a href="{% url 'users:user_info' %}">#}
+{#                                            <span>人员管理</span>#}
+{#                                        </a>#}
+{#                                    </li>#}
 
                                     <li {% ifequal web_chose_left_2 'user_list' %}class="active"{% endifequal %}>
                                         <a href="{% url 'users:user_list' %}">
