--- a/templates/host_management/host/host_list.html
+++ b/templates/host_management/host/host_list.html
@@ -81,7 +81,7 @@
                         <div class="panel-body" id="table_content">
 
                             <div class="selectBox">
-                                {% if request.user.role > 1 %}
+                                {% if request.user.role < 3 %}
                                     <a class="btn btn-sm btn-default" data-toggle="modal" data-target="#AddHostModal"><i
                                             class="fa fa-plus"></i> 添加主机</a>
                                 {% endif %}
