--- a/templates/host_management/other/data_dict_list.html
+++ b/templates/host_management/other/data_dict_list.html
@@ -27,7 +27,7 @@
                         </div>
 
                         <div class="selectBox" style="padding: 15px;padding-bottom: 0">
-                            {% if request.user.role > 1 %}
+                            {% if request.user.role < 3 %}
                                     <a class="btn btn-sm btn-default" data-toggle="modal" data-target="#AddDictModal"><i
                                             class="fa fa-plus"></i> 添加字典</a>
                                 {% endif %}
