--- a/templates/sys_inspect/inspect_content_list.html
+++ b/templates/sys_inspect/inspect_content_list.html
@@ -19,7 +19,7 @@
                         </div>
 
                         <div class="selectBox" style="padding: 15px;padding-bottom: 0">
-                            {% if request.user.role > 1 %}
+                            {% if request.user.role < 3 %}
                                     <a class="btn btn-sm btn-default" data-toggle="modal" data-target="#AddContModal"><i
                                             class="fa fa-plus"></i> 添加任务</a>
                                 {% endif %}
