--- a/templates/users/user/user_list.html
+++ b/templates/users/user/user_list.html
@@ -56,7 +56,7 @@
                         <div class="panel-body" id="table_content">
                             <!-- 功能 -->
                             <div style="padding-bottom: 15px;">
-                                {% if request.user.role > 1 %}
+                                {% if request.user.role <31 %}
                                     <a class="btn btn-sm btn-default" data-toggle="modal" data-target="#AddUserModal">
                                         <i class="fa fa-plus"></i> 添加用户
                                     </a>
@@ -97,7 +97,7 @@
                                 {% for each_user in users.object_list %}
                                     <!-- 管理员以上才能看到停用的用户 -->
                                     {% if each_user.status == 2 %}
-                                        {% if request.user.role > 1 %}
+                                        {% if request.user.role <3 %}
                                             <div class="col-sm-3" style="padding-left: 5px; padding-right: 5px;width: 33%;">
                                                 <div class="panel" style="margin-bottom: 30px;">
                                                     <div class="panel-heading"
@@ -374,8 +374,8 @@
                             </div>
                             <div class="col-md-9" style="padding: 0;">
                                 <select name="role" class="selectpicker form-control" style="display: none;">
-                                    <option value="1" selected>普通用户</option>
-                                    <option value="2">管理员</option>
+                                    <option value="1" selected>单位管理员</option>
+                                    <option value="2">平台管理员</option>
                                     {% if request.user.role > 2 %}
                                         <option value="3">超级管理员</option>
                                     {% endif %}
@@ -571,14 +571,14 @@
                                                 class="selectpicker form-control"
                                                 style="display: none;">
                                             <option value="1" {% ifequal each_user.role 1 %} selected {% endifequal %}>
-                                                普通用户
+                                                超级管理员
                                             </option>
                                             <option value="2" {% ifequal each_user.role 2 %} selected {% endifequal %}>
-                                                管理员
+                                                平台管理员
                                             </option>
-                                            {% if request.user.role > 2 %}
+                                            {% if request.user.role <3 %}
                                                 <option value="3" {% ifequal each_user.role 3 %}
-                                                        selected {% endifequal %}>超级管理员
+                                                        selected {% endifequal %}>单位管理员
                                                 </option>
                                             {% endif %}
                                         </select>
